--- a/pie/package.json
+++ b/pie/package.json
@@ -8,7 +8,8 @@
     "coffee-script": "~1.3.3",
     "redis": "~0.7.2",
     "connect-redis": "~1.4.0",
-    "hiredis": "~0.1.14"
+    "hiredis": "~0.1.14",
+    "express-namespace": "~0.1.1"
   },
   "devDependencies": {
     "node-dev": "~0.2.3",
